add logo, change colors

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#F63366"
-backgroundColor="#191e24"
+primaryColor="#2B7EF2"
+backgroundColor="#1E1E1E"
 secondaryBackgroundColor="black"
-textColor="#FFFFFF"
+textColor="#FAF9F6"
